--- a/film.html
+++ b/film.html
@@ -4,9 +4,9 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;500;800&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="src/home-styles.css">
+		<link rel="stylesheet" href="src/film-styles.css">
 		<meta charset="UTF-8">
-    <title>Phillip's Blog Thingy</title>
+    <title>Film</title>
 	</head>
 	<body>
     <header>
@@ -21,26 +21,9 @@
 	          </ul>
 	      </nav>
 			</section>
-			<section class="hero">
-				<h1 id="title">Phillip's site thingy</h1>
-				<a href="#title-blog"><button type="button" name="next-button" id="next-button">Blog</button></a>
-			</section>
+			<img src="src/blade1.jpg" id="img-blade">
     </header>
-
     <main>
-			<h2 id="title-blog">Blog:</h2>
-			<section class="content">
-				<div class="content-block-img">
-					<img src="src/witcher3.jfif" alt="" class="content-img">
-				</div>
-				<div class="content-block">
-						<h2 class="content-block-title">The Witcher 3</h2>
-						<p class="content-block-text">random stuff i geusassadsa</p>
-				</div>
-			</section>
     </main>
-
-    <footer>
-    </footer>
 	</body>
 </html>
